# orcwiz

./: Cargo.toml  README.md  build.rs  opencode.json
skills/: orchestrator.md
src/: agent.rs  cli.rs  config.rs  db.rs  linear.rs  main.rs  orchestrator.rs  runner.rs  service.rs  web.rs
src/agent/: cli.rs  mod.rs  opencode.rs
web/: package.json  vite.config.ts
web/src/: App.tsx  index.css  markdownUtils.ts  pathUtils.ts  types.ts
web/src/components/: AddTaskModal.tsx  ChatTab.tsx  FileExplorer.tsx  GitTab.tsx  KanbanColumn.tsx  MessageItem.tsx  QuestionWizard.tsx  TaskCard.tsx  TaskDetailsModal.tsx
